tests/error/type_match/base_case_const_to_non_const_auto_ref.bz
function test()
{
	let ci: const int32 = 0;
	let _: #int32 = ci;
}
